mobile full screen fix, need to make document scrollable on mobile

--- a/src/mint/react/components/App/App.scss
+++ b/src/mint/react/components/App/App.scss
@@ -67,6 +67,139 @@ body {
       display: none;
     }
   }
+
+  .noJudder {
+
+    & > .tabs {
+      position: fixed;
+      bottom: 0;
+      height: 40px;
+      background: white;
+      padding: 0;
+      -webkit-transform: translate3d(0, 0, 0);
+      transform : translate3d(0, 0, 0);
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden;
+      background-color: rgb(249, 249, 249);
+      background-image: linear-gradient(rgb(179, 179, 179), rgb(179, 179, 179) 49%, transparent 51%);
+      background-position: center top;
+      background-size: 100% 0.1rem;
+      background-repeat: no-repeat;
+      @media only screen and (min-width: 600px) {
+        display: none;
+      }
+
+      h1 {
+        height: 40px;
+        line-height: 40px;
+        color: #8D8D8D;
+        width: calc(100%/3);
+        padding: 0;
+        text-align: center;
+
+        svg {
+          display: block;
+          height: 20px;
+          width: 40px;
+          margin: 5px auto 0;
+        }
+
+        &.selected {
+          color: $secondaryColor;
+        }
+
+        span {
+          border-bottom: 4px solid transparent !important;
+          height: 20px;
+          display: block;
+          font-size: 10px;
+          line-height: 10px;
+        }
+      }
+    }
+    
+    & > .buttons {
+      position: fixed;
+      width: 100%;
+      bottom: 40px;
+      left: 0;
+      padding: 0;
+      height: 40px;
+      z-index: 10;
+      -webkit-transform: translate3d(0, 0, 0);
+      transform : translate3d(0, 0, 0);
+      -webkit-overflow-scrolling: touch;
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden;
+      @media only screen and (min-width: 600px) {
+        display: none;
+      }
+
+
+      button {
+        margin: 0 0;
+        width: 100%;
+        border-radius: 0;
+        padding: 0 $padding;
+
+        @media only screen and (max-width: 600px) {
+          &.sub {
+
+            a {
+              text-align: left;
+              height: 40px;
+              line-height: 40px;
+            }
+
+            svg {
+              height: 30px;
+              width: 30px;
+              margin-bottom: 5px;
+
+              &:last-of-type {
+                height: 20px;
+                width: 20px;
+                margin-left: 10px;
+                display: inline-block;
+              }
+            }
+
+            .text {
+              height: 40px;
+              width: 75%;
+              span {
+                display: inline-block;
+                height: 40px;
+                line-height: 40px;
+                font-weight: 200;
+                font-size: 16px;
+              }
+              p {
+                display: inline-block;
+                height: 40px;
+                line-height: 40px;
+                float: right;
+                font-size: 17px;
+                font-weight: 800;
+              }
+            }
+          }
+        }
+        
+        &.blue {
+          display: none;
+        }
+        &.locked {
+          background: $secondaryColor;
+          color: white;
+
+          svg {
+            fill: white;
+          }
+        }
+      }
+    }
+  }
 }
 
 .app__view {
@@ -76,16 +209,16 @@ body {
   overflow-y: scroll;
   text-align: left;
   -webkit-overflow-scrolling: touch;
-  height: calc(100% - #{$nav-height * 1.5});
+  height: calc(100% - 90px);
 
   @media only screen and (max-width: 600px) {
-    height: calc(100% - #{$nav-height * 1.5});
+    height: calc(100% - 90px);
   }
 
   @media only screen and (min-width: 600px) {
     display: inline-block;
     overflow-y: auto;
-    height: calc(100% - #{$nav-height * 1.5});
+    height: calc(100% - 75px);
 
     &.squeeze {
       width: calc(100% - 250px);
