--- a/src/mint/react/components/Search/Search.scss
+++ b/src/mint/react/components/Search/Search.scss
@@ -7,7 +7,7 @@
   width: 100%;
   max-width: 600px;
   margin: 10px 0 10px 30px;
-  height: 34px;
+  height: 30px;
 
   & > * {
     height: 100%;
@@ -62,7 +62,7 @@
     flex-direction: column;
     width: 100%;
     left: 0;
-    top: 31px;
+    top: 27px;
     z-index: 100;
     box-shadow: $card-box-shadow;
 
