--- a/src/mint/react/components/Tabs/Tabs.scss
+++ b/src/mint/react/components/Tabs/Tabs.scss
@@ -4,20 +4,22 @@
 @import '../../../react-common/styles/Animations';
 
 .tabs {
-  background: $color-blue;
+  background: white;
   border-bottom: 1px solid $border-color-light;
-  height: $nav-height / 1.7;
+  height: $nav-height - $padding;
   padding: 0 $padding;
   width: 100%;
-  z-index: 100;
+  z-index: 99;
 
   h1 {
-    color: $color-white;
+    color: #333;
     cursor: pointer;
     display: inline-block;
     font-size: 15px;
     padding: 0 ($padding * 2);
     position: relative;
+    height: $nav-height - $padding;
+    line-height: $nav-height - $padding;
 
     svg {
       display: inline-block;
@@ -31,8 +33,8 @@
 
     &.selected {
       span {
-        border-bottom: 4px solid $color-white;
-        height: 28px;
+        border-bottom: 4px solid $secondaryColor;
+        height: $nav-height - $padding - 1px;
       }
     }
   }
