--- a/src/mint/react/components/View/Results/Results.scss
+++ b/src/mint/react/components/View/Results/Results.scss
@@ -216,6 +216,7 @@ $colorList: #fddcdc #eaf9ff #d9f8f0 #f4e99e;
 
     &.selected {
       padding: $padding ($padding / 2) ($padding / 3);
+      z-index: 1000;
 
       @media only screen and (max-width: 865px) {
         position: fixed;
