--- a/src/mint/react/components/View/View.scss
+++ b/src/mint/react/components/View/View.scss
@@ -12,45 +12,6 @@
 		padding: 0 0 $padding*7.5;
 	}
 
-  & > .tabs {
-    position: fixed;
-    bottom: 0;
-    height: 40px;
-    background: white;
-    padding: 0;
-    @media only screen and (min-width: 600px) {
-      display: none;
-    }
-
-    h1 {
-      height: 40px;
-      line-height: 40px;
-      color: #8D8D8D;
-      width: calc(100%/3);
-      padding: 0;
-      text-align: center;
-
-      svg {
-        display: block;
-        height: 20px;
-        width: 40px;
-        margin: 5px auto 0;
-      }
-
-      &.selected {
-        color: $secondaryColor;
-      }
-
-      span {
-        border-bottom: 4px solid transparent !important;
-        height: 20px;
-        display: block;
-        font-size: 10px;
-        line-height: 10px;
-      }
-    }
-  }
-
 	* {
 	    max-width: 1066px;
 	}
@@ -62,82 +23,5 @@
 	    padding: $padding $padding*2;
 	    margin: 10px 2px 0;
 	}
-
-	& > .buttons {
-		position: fixed;
-		width: 100%;
-		bottom: 40px;
-		left: 0;
-		padding: 0;
-		height: 40px;
-		z-index: 10;
-
-		@media only screen and (min-width: 600px) {
-			display: none;
-		}
-
-
-		button {
-			margin: 0 0;
-			width: 100%;
-			border-radius: 0;
-			padding: 0 $padding;
-
-      @media only screen and (max-width: 600px) {
-        &.sub {
-
-          a {
-            text-align: left;
-            height: 40px;
-            line-height: 40px;
-          }
-
-          svg {
-            height: 30px;
-            width: 30px;
-            margin-bottom: 5px;
-
-            &:last-of-type {
-              height: 20px;
-              width: 20px;
-              margin-left: 10px;
-              display: inline-block;
-            }
-          }
-
-          .text {
-            height: 40px;
-            width: 75%;
-            span {
-              display: inline-block;
-              height: 40px;
-              line-height: 40px;
-              font-weight: 200;
-              font-size: 16px;
-            }
-            p {
-              display: inline-block;
-              height: 40px;
-              line-height: 40px;
-              float: right;
-              font-size: 17px;
-              font-weight: 800;
-            }
-          }
-        }
-      }
-			
-			&.blue {
-        display: none;
-      }
-			&.locked {
-				background: $secondaryColor;
-				color: white;
-
-				svg {
-					fill: white;
-				}
-			}
-		}
-	}
 }
+
